--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "main": "server.js",
   "author": "Abhishek Kishor",
   "license": "ISC",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+
+  "devDependencies": {
+
+    "nodemon": "2.0.4"
+
   }
+
 }
